--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-crib-listing></app-crib-listing>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <a href="" class="navbar-brand">NG2 Cribs</a>
+    </div>
+</nav>
+<div class="container">
+    <div class="row">
+        <app-crib-listing></app-crib-listing>
+    </div>
+</div>
