--- a/src/app/crib-listing/crib-listing.component.html
+++ b/src/app/crib-listing/crib-listing.component.html
@@ -1,3 +1,25 @@
-<div *ngFor="let crib of cribs" class="col-sm-4">
-   <app-crib-card [crib]="crib" ></app-crib-card>
+<div class="row">
+   <div class="col-sm-12">
+      <div class="panel panel-default">
+         <div class="panel-body">
+            <div class="col-sm-4">
+               <label for="sort-field">Sort By</label>
+               <select 
+               name="sort-field" 
+               id="sort-field"
+               class="form-control"
+               [(ngModel)]="sortField">
+                  <option 
+                  *ngFor = "let field of sortFields"
+                  [value] = "field">
+                  {{utilService.capitalize(field)}}
+               </option>
+            </select>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div *ngFor="let crib of cribs | sortBy: [sortField]" class="col-sm-4">
+      <app-crib-card [crib]="crib"></app-crib-card>
+   </div>
 </div>
