--- a/src/app/crib-listing/crib-listing.component.html
+++ b/src/app/crib-listing/crib-listing.component.html
@@ -1,7 +1,10 @@
 <div class="row">
+
+
    <div class="col-sm-12">
       <div class="panel panel-default">
          <div class="panel-body">
+
             <div class="col-sm-4">
                <label for="sort-field">Sort By</label>
                <select 
@@ -16,10 +19,35 @@
                </option>
             </select>
             </div>
+
+            <div class="col-sm-4">
+               <label for="sort-direction">Sort Direction</label>
+
+               <div>
+
+                  <button 
+                  class="btn btn-primary"
+                  [ngClass]="{'btn-success': sortDirection == 'asc'}"
+                  (click)="sortDirection = 'asc'">
+                     Asc
+                  </button>
+
+                  <button 
+                  class="btn btn-primary"
+                  [ngClass]="{'btn-success': sortDirection == 'desc'}"
+                  (click)="sortDirection = 'desc'">
+                     Desc
+                  </button>
+
+               </div>
+
+
+            </div>
+
          </div>
       </div>
    </div>
-   <div *ngFor="let crib of cribs | sortBy: [sortField]" class="col-sm-4">
+   <div *ngFor="let crib of cribs | sortBy: [sortField, sortDirection]" class="col-sm-4">
       <app-crib-card [crib]="crib"></app-crib-card>
    </div>
 </div>
